--- a/CountdownTimer/package.json
+++ b/CountdownTimer/package.json
@@ -1,7 +1,8 @@
 {
   "name": "countdown-timer",
   "version": "0.0.1",
-  "description": "",
+  "description": "Countdown Timer",
+  "repository": "https://github.com/citadis/jestdemo/tree/master/CountdownTimer",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -10,12 +11,12 @@
   "author": "Russell Clarke",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.14.0",
+    "express": "^4.16.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
-    "babel-core": "^6.18.2",
+    "babel-core": "^6.26.3",
     "babel-jest": "^19.0.0",
     "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
@@ -23,10 +24,10 @@
     "css-loader": "^0.26.0",
     "enzyme": "^2.8.2",
     "foundation-sites": "^6.2.4",
-    "jest": "^19.0.2",
+    "jest": "^20.0.1",
     "jquery": "^3.1.1",
     "node-sass": "^3.13.0",
-    "prop-types": "^15.5.8",
+    "prop-types": "^15.5.9",
     "react-addons-test-utils": "^15.5.1",
     "react-test-renderer": "^15.5.4",
     "sass-loader": "^4.0.2",
@@ -34,7 +35,7 @@
     "style-loader": "^0.13.1",
     "webpack": "^1.15.0"
   },
-  "jest" : {
+  "jest": {
     "moduleFileExtensions": [
       "js",
       "jsx"
