--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "jest"
+    "test": "jest",
+    "e2e": "wdio wdio.conf.js"
   },
   "author": "Russell Clarke",
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.3",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -21,18 +22,22 @@
     "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "chai": "^4.1.2",
     "css-loader": "^0.26.0",
-    "enzyme": "^2.8.2",
-    "foundation-sites": "^6.2.4",
-    "jest": "^20.0.1",
-    "jquery": "^3.1.1",
+    "enzyme": "^2.9.1",
+    "foundation-sites": "^6.4.3",
+    "jest": "^20.0.4",
+    "jquery": "^3.3.1",
     "node-sass": "^3.13.0",
-    "prop-types": "^15.5.9",
-    "react-addons-test-utils": "^15.5.1",
-    "react-test-renderer": "^15.5.4",
+    "prop-types": "^15.6.2",
+    "react-addons-test-utils": "^15.6.2",
+    "react-test-renderer": "^15.6.2",
     "sass-loader": "^4.0.2",
-    "script-loader": "^0.7.0",
+    "script-loader": "^0.7.2",
+    "selenium-standalone": "^6.15.3",
     "style-loader": "^0.13.1",
+    "wdio-cucumber-framework": "^2.2.7",
+    "webdriverio": "^4.13.2",
     "webpack": "^1.15.0"
   },
   "jest": {
