--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "countdown-timer",
   "version": "0.0.1",
   "description": "Countdown Timer",
-  "repository": "https://github.com/citadis/jestdemo/tree/master/CountdownTimer",
+  "repository": "https://github.com/citadis/countdown-timer",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "jest",
-    "e2e": "wdio wdio.conf.js"
+    "test": "jest"
   },
   "author": "Russell Clarke",
   "license": "MIT",
@@ -22,7 +21,6 @@
     "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "chai": "^4.1.2",
     "css-loader": "^0.26.0",
     "enzyme": "^2.9.1",
     "foundation-sites": "^6.4.3",
@@ -34,10 +32,7 @@
     "react-test-renderer": "^15.6.2",
     "sass-loader": "^4.0.2",
     "script-loader": "^0.7.2",
-    "selenium-standalone": "^6.15.3",
     "style-loader": "^0.13.1",
-    "wdio-cucumber-framework": "^2.2.7",
-    "webdriverio": "^4.13.2",
     "webpack": "^1.15.0"
   },
   "jest": {
