--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "build": "webpack",
     "test": "jest"
   },
   "author": "Russell Clarke",
