--- a/package.json
+++ b/package.json
@@ -13,24 +13,24 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.3",
-    "react": "^15.6.2",
-    "react-dom": "^15.6.2"
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-jest": "^19.0.0",
     "babel-loader": "^6.2.8",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^0.26.0",
-    "enzyme": "^2.9.1",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
     "foundation-sites": "^6.4.3",
-    "jest": "^20.0.4",
+    "jest": "^23.6.0",
     "jquery": "^3.3.1",
     "node-sass": "^3.13.0",
     "prop-types": "^15.6.2",
-    "react-addons-test-utils": "^15.6.2",
-    "react-test-renderer": "^15.6.2",
+    "react-test-renderer": "^16.5.2",
     "sass-loader": "^4.0.2",
     "script-loader": "^0.7.2",
     "style-loader": "^0.13.1",
